--- a/Level2/level2.css
+++ b/Level2/level2.css
@@ -4,55 +4,58 @@
 
 .type p {
   
-    overflow: hidden; 
-    border-right: .15em solid black; 
-    white-space: nowrap; 
-    margin: 100 ; 
-    letter-spacing: .15em;
+    overflow: hidden; /* Ensures the content is not revealed until the animation */
+    border-right: .15em solid black; /* The typwriter cursor */
+    white-space: nowrap; /* Keeps the content on a single line */
+    margin: 100 ; /* Gives that scrolling effect as the typing happens */
+    letter-spacing: .15em; /* Adjust as needed */
     animation: 
       typing 2.5s steps(40, end),
       blink-caret .75s step-end infinite;
   }
   
+  /* The typing effect */
   @keyframes typing {
     from { width: 0% }
     to { width: 100% }
   }
   
+  /* The typewriter cursor effect */
   @keyframes blink-caret {
     from, to { border-color: transparent }
     50% { border-color: black; }
   }
-body {
+
+  body {
     font-family: Arial, sans-serif;
     padding: 10px;
-}
-#output {
-  margin-bottom: 20px;
-}
-.button-container {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 10px;
-}
-.button {
-  padding: 10px 20px;
-  background-color: #007bff;
-  color: white;
-  border: none;
-  cursor: pointer;
-  border-radius: 5px;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
-.button:hover {
-  background-color: #0056b3;
-}
-.endbutton:hover{
+  }
+  #output {
+    margin-bottom: 20px;
+  }
+  .button-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+  }
+  .button {
+    padding: 10px 20px;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  }
+  .button:hover {
+    background-color: #0056b3;
+  }
+  .endbutton:hover{
     animation: shake 0.5s;
     animation-iteration-count: infinite;
-}
+  }
 
-@keyframes shake{
+  @keyframes shake{
   0% { transform: translate(1px, 1px) rotate(0deg); }
   10% { transform: translate(-1px, -2px) rotate(-1deg); }
   20% { transform: translate(-3px, 0px) rotate(1deg); }
@@ -64,4 +67,4 @@ body {
   80% { transform: translate(-1px, -1px) rotate(1deg); }
   90% { transform: translate(1px, 2px) rotate(0deg); }
   100% { transform: translate(1px, -2px) rotate(-1deg); }
-}
+  }
