--- a/Level2/level2.css
+++ b/Level2/level2.css
@@ -4,23 +4,21 @@
 
 .type p {
   
-    overflow: hidden; /* Ensures the content is not revealed until the animation */
-    border-right: .15em solid black; /* The typwriter cursor */
-    white-space: nowrap; /* Keeps the content on a single line */
-    margin: 100 ; /* Gives that scrolling effect as the typing happens */
-    letter-spacing: .15em; /* Adjust as needed */
+    overflow: hidden; 
+    border-right: .15em solid black; 
+    white-space: nowrap; 
+    margin: 100 ; 
+    letter-spacing: .15em; 
     animation: 
       typing 2.5s steps(40, end),
       blink-caret .75s step-end infinite;
   }
   
-  /* The typing effect */
   @keyframes typing {
     from { width: 0% }
     to { width: 100% }
   }
   
-  /* The typewriter cursor effect */
   @keyframes blink-caret {
     from, to { border-color: transparent }
     50% { border-color: black; }
